[package]
name = "solana-account-decoder"
version = "1.15.0"
description = "Solana account decoder"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-account-decoder"
license = "Apache-2.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
bv = "0.11.1"
lazy_static = "1.4.0"
serde = "1.0.144"
serde_derive = "1.0.103"
serde_json = "1.0.83"
solana-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=1.15.0" }
solana-config-program = { path = "../programs/config", version = "=1.15.0" }
solana-sdk = { path = "../sdk", version = "=1.15.0" }
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=0.5.0", features = ["no-entrypoint"] }
thiserror = "1.0"
zstd = "0.11.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
