[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-accounts-bench"
version = "1.12.0"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rayon = "1.5.3"
solana-logger = { path = "../logger", version = "=1.12.0" }
solana-measure = { path = "../measure", version = "=1.12.0" }
solana-runtime = { path = "../runtime", version = "=1.12.0" }
solana-sdk = { path = "../sdk", version = "=1.12.0" }
solana-version = { path = "../version", version = "=1.12.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
