[package]
name = "solana-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rayon = "1.5.3"
solana-logger = { path = "../logger", version = "=1.15.0" }
solana-measure = { path = "../measure", version = "=1.15.0" }
solana-runtime = { path = "../runtime", version = "=1.15.0" }
solana-sdk = { path = "../sdk", version = "=1.15.0" }
solana-version = { path = "../version", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
