[package]
name = "solana-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
solana-accounts-db = { workspace = true }
solana-logger = { workspace = true }
solana-measure = { workspace = true }
solana-sdk = { workspace = true }
solana-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
